<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:scrollbars="vertical"
    tools:context=".ui.fragment.summary.ExpenseSummaryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_finance_title"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/fragment_summary_finance_tv_title"
            app:layout_constraintEnd_toEndOf="@+id/cv_summary"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="@+id/cv_summary"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_large"
            app:cardCornerRadius="@dimen/corner_large"
            app:cardElevation="@dimen/elevation_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_finance_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/chart_category"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_small"
                    android:minHeight="200dp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_summary_info"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_summary_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_normal"
                    android:text="@string/fragment_summary_expense_tv_limit_percent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_summary_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_summary_info"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/tv_summary_info"
                    app:layout_constraintTop_toTopOf="@+id/tv_summary_info" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_show_expense_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/fragment_summary_expense_btn_add"
            app:cardElevation="@dimen/elevation_normal"
            app:layout_constraintEnd_toEndOf="@+id/cv_summary"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="@+id/cv_summary"
            app:layout_constraintTop_toBottomOf="@+id/cv_summary" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_expense_title"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/fragment_summary_expense_tv_title"
            app:layout_constraintEnd_toEndOf="@+id/cv_summary"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="@+id/cv_summary"
            app:layout_constraintTop_toBottomOf="@+id/btn_show_expense_form" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_expenses_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/fragment_summary_tv_list_empty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rv_expenses" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_expenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_expense_title"
            tools:itemCount="10"
            tools:listitem="@layout/item_rv_expense">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>